:bug: fix: error in relational model, and DB struture