@@ -1,5 +1,6 @@
 package br.com.alura.ProjetoAlura.user;
 
+import br.com.alura.ProjetoAlura.course.CourseRepository;
 import br.com.alura.ProjetoAlura.util.ErrorItemDTO;
 import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
@@ -10,15 +11,20 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 public class UserController {
-
+	
+	private final List<User> user = new ArrayList<>();
     private final UserRepository userRepository;
+    private final CourseRepository courseRepository;
 
-    public UserController(UserRepository userRepository) {
+    public UserController(UserRepository userRepository, CourseRepository courseRepository) {
         this.userRepository = userRepository;
+        this.courseRepository = courseRepository;
     }
 
     @Transactional
@@ -36,8 +42,8 @@ public class UserController {
     }
 
     @GetMapping("/user/all")
-    public List<UserListItemDTO> listAllUsers() {
-        return userRepository.findAll().stream().map(UserListItemDTO::new).toList();
+    public List<UserListItemDTO> getAllUsers() {
+        return userRepository.findAll().stream().map(UserListItemDTO::new).collect(Collectors.toList());
     }
 
 }
